syntax = "proto3";

option java_package = "com.deft.grpc.enums";
option java_outer_classname = "SexEnumProto";

enum SexEnum {
  INVALID = 0;
  MALE = 1;
  FEMALE = 2;
}